fixed image warning and footer overlapping

--- a/styles/components/Footer.module.css
+++ b/styles/components/Footer.module.css
@@ -2,9 +2,9 @@
     background-color: var(--accent-color-1);
     color: var(--font-primary);
 
-    position: absolute;
+    margin-top: 2rem;
+    /* position: absolute; */
     width: 100%;
-    bottom: 0;
     height: max-content;
 }
 
@@ -40,7 +40,7 @@
     text-decoration: underline;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 835px) {
     .footer ul {
         flex-direction: column;
     }
