--- a/styles/components/Slideshow.module.css
+++ b/styles/components/Slideshow.module.css
@@ -42,7 +42,9 @@
 .imgContainer {
     background-color: #EEE;
     width: 100%;
+    height: 100%;
     flex-shrink: 0;
+    position: relative;
 
     display: grid;
     place-items: center;
